Fix color and design alignment in home page and hotlist

--- a/src/components/RecommendationProduct/RecommendationProduct.scss
+++ b/src/components/RecommendationProduct/RecommendationProduct.scss
@@ -5,7 +5,7 @@
 }
 
 .recommendation-product-container {
-    margin: 20px auto;
+    margin: 0 auto 20px;
     padding: 0 10px;
     max-width: 430px;
 }
