--- a/src/components/Toppicks/Toppicks.scss
+++ b/src/components/Toppicks/Toppicks.scss
@@ -1,11 +1,11 @@
 @import 'base';
 
 .toppicks__title {
-    padding: 10px 10px 5px;
+    padding: 15px 10px 5px;
 }
 
 .toppicks-container {
-    margin: 20px auto;
+    margin: 0 auto 20px;
     padding: 0 10px;
     max-width: 430px;
 }
